# Thakir-Prayer-Times-QWidget

./: CMakeLists.txt  README.md  io.github.hafmed.Thakir-Prayer-Times.desktop  io.github.hafmed.Thakir-Prayer-Times.flatpak  io.github.hafmed.Thakir-Prayer-Times.metainfo.xml  io.github.hafmed.Thakir-Prayer-Times.yaml  qtresource.qrc  thakir_prayer_times.nsi  winlogohaf.rc
src/: about.cpp  about.h  about.ui  engine.cpp  engine.h  main.cpp  thakir_prayer_times.cpp  thakir_prayer_times.h  thakir_prayer_times.ui
